--- a/ui/EnglishPractice.ui
+++ b/ui/EnglishPractice.ui
@@ -287,7 +287,7 @@
          <item>
           <widget class="QTextEdit" name="textEdit_2">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
@@ -295,7 +295,7 @@
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>50</height>
+             <height>80</height>
             </size>
            </property>
            <property name="maximumSize">
@@ -320,10 +320,16 @@
            <item>
             <widget class="QPushButton" name="pushButton_24">
              <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>39</height>
+              </size>
              </property>
              <property name="maximumSize">
               <size>
@@ -342,10 +348,16 @@
            <item>
             <widget class="QPushButton" name="pushButton_25">
              <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
+             </property>
+             <property name="minimumSize">
+              <size>
+               <width>0</width>
+               <height>39</height>
+              </size>
              </property>
              <property name="maximumSize">
               <size>
@@ -378,13 +390,13 @@
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>50</height>
+             <height>60</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>120</height>
+             <height>100</height>
             </size>
            </property>
            <property name="font">
@@ -400,15 +412,21 @@
          <item>
           <widget class="QPushButton" name="pushButton_23">
            <property name="sizePolicy">
-            <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+            <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>60</height>
+            </size>
+           </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>120</height>
+             <height>100</height>
             </size>
            </property>
            <property name="text">
